--- a/ProyectoReal/pill-drill/src/styles/Header.module.css
+++ b/ProyectoReal/pill-drill/src/styles/Header.module.css
@@ -1,14 +1,10 @@
 
 .header{
 
-    background-image: linear-gradient(to right, rgb(0 0 0/ .8), rgb(0 0 0/ .7)) url(
-        
-    );
-    background-size: cover;
-    background-position: 50%;
-    padding: 0.2% 0;
-    background-color: var(--blanco);
-
+  width: 1328px;
+  height: 226px;
+  flex-shrink: 0;
+  background: #4548AA;
 }
 
 
